feat: Added more Pythia8 Datasets (npileup = 10, 20, 50, 100, 200) and wrote the list-based-metrics because the original were too slow.

--- a/src/notebooks/issue10/Duplicate-removal.ipynb
+++ b/src/notebooks/issue10/Duplicate-removal.ipynb
@@ -344,7 +344,8 @@
     }
    ],
    "source": [
-    "from src.utils.duplicate_removal import duplicate_removal_1, get_track_to_geometry_mapping\n",
+    "from src.utils.preprocessing import get_track_to_geometry_mapping\n",
+    "from src.utils.duplicate_removal import duplicate_removal_1\n",
     "\n",
     "threshold_x = 2500 * xy_hyperparams['bin-size'][0]\n",
     "threshold_y = 1000 * xy_hyperparams['bin-size'][1]\n",
@@ -389,7 +390,7 @@
     }
    ],
    "source": [
-    "from src.utils.duplicate_removal import duplicate_removal_2, get_track_to_geometry_mapping\n",
+    "from src.utils.duplicate_removal import duplicate_removal_2\n",
     "\n",
     "threshold_x = 1000 * xy_hyperparams['bin-size'][0]\n",
     "threshold_y = 1000 * xy_hyperparams['bin-size'][1]\n",
@@ -508,7 +509,7 @@
    ],
    "source": [
     "from utils import  plot_hits\n",
-    "from src.utils.duplicate_removal import convert_tracks\n",
+    "from src.utils.preprocessing import convert_tracks\n",
     "from src.utils.metrics import get_track_to_truth_row_mapping, purity\n",
     "\n",
     "# find a bin with at least 18 hits\n",
@@ -573,7 +574,7 @@
     }
    ],
    "source": [
-    "from src.utils.duplicate_removal import purify_xy_hits\n",
+    "from src.utils.purification import purify_xy_hits\n",
     "\n",
     "purified_xy_hits = purify_xy_hits(target, rz_hyperparams, ideal_df)\n",
     "\n",
@@ -611,7 +612,7 @@
    },
    "outputs": [],
    "source": [
-    "from src.utils.duplicate_removal import purify_xy_estimations\n",
+    "from src.utils.purification import purify_xy_estimations\n",
     "\n",
     "rz_hyperparams = {\n",
     "    'bin-size': (0.04, 15),\n",
